<resources>
    <string name="app_name">InfiniTeam</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">DDwuiVX5PAXZHwZq9Vz8VzWWnXRXVBiWEtpw5wQ0</string>
    <string name="back4app_client_key">LwqTdIf5H15CQgpA4ZfyioR8nRGpk4cTz1fvNEyZ</string>
    <string name="accept_task">Accept</string>
    <string name="decline_task">Decline</string>
    <string name="current_task_header">Current Task</string>
    <string name="available_tasks_header">Available Tasks</string>
    <string name="date">Date</string>
    <string name="hours">Hours:</string>
    <string name="notices">Notices</string>
    <string name="rota">Rota</string>
    <string name="tasks">Tasks</string>
    <string name="create_notice">Create notice</string>
    <string name="notices_header">Notices</string>
    <string name="notices_alert_priority_desc">Icon to alert user to high priority notice</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="priority_notice">Priority Notice?</string>
    <string name="insert_message">Insert message here</string>
    <string name="insert_subject">Insert subject line here</string>
    <string name="message">Message:</string>
    <string name="archive">Archive</string>
    <string name="subject">Subject:</string>
    <string name="give_away_hours">Give Away Hours</string>
    <string name="available_hours">Available Hours</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="company_logo">Company logo</string>
    <string name="create_task">Create task</string>
    <string name="decline">Decline</string>
    <string name="complete">Complete</string>
    <string name="accept">Accept</string>
    <string name="task">Task:</string>
    <string name="priority_task">Priority Task?</string>
    <string name="task_description">Task Description:</string>
    <string name="create">Create</string>
    <string name="product_image">Product image</string>
</resources>