<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/send_notice_heading1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/subject"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/send_notice_subject"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/send_notice_heading1"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/insert_subject"
        android:inputType="textMultiLine"
        android:textSize="32sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:autofillHints="subject" />

    <TextView
        android:id="@+id/send_notice_heading2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/message"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/send_notice_subject"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/send_notice_content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/send_notice_heading2"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/insert_message"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        android:gravity="top"
        android:ellipsize="end"
        android:maxLines="10"
        android:autofillHints="message" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/send_notice_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/send_notice_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:text="@string/priority_notice"
        android:textSize="20sp"
        android:checked="false" />

    <Button
        android:id="@+id/send_notice_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_style"
        android:text="@string/send"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableLeft="@drawable/send_white_48dp"
        android:paddingLeft="30dp"
        android:paddingRight="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>