<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/create_task_heading"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/task_description"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/create_task_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/create_task_heading"
        app:layout_constraintBottom_toTopOf="@id/create_task_priority"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Insert task description here"
        android:inputType="textMultiLine"
        android:textSize="32sp"
        android:gravity="top"
        android:autofillHints="subject" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/create_task_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/create_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:text="@string/priority_task"
        android:textSize="20sp"
        android:checked="false" />

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_style"
        android:text="@string/create"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableLeft="@drawable/add_task_white_48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>